Upgraded to CartPole-v1

--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "## Reinforcement Learning Example\n",
     "\n",
-    "Let's finish this introduction let's learn about the popular \"hello world\" (1) example environment for RL, balancing a pole vertically on a moving cart, called _CartPole_. Then we'll see how to use RLlib to train a policy using a popular RL algorithm, _Proximal Policy Optimization_, again using _CartPole_.\n",
+    "Let's finish this introduction let's learn about the popular \"hello world\" (1) example environment for RL, balancing a pole vertically on a moving cart, called `CartPole`. Then we'll see how to use RLlib to train a policy using a popular RL algorithm, _Proximal Policy Optimization_, again using `CartPole`.\n",
     "\n",
     "(1) In books and tutorials on programming languages, it is a tradition that the very first program shown prints the message \"Hello World!\"."
    ]
@@ -201,7 +201,7 @@
    "source": [
     "### CartPole and OpenAI\n",
     "\n",
-    "The popular [OpenAI \"gym\" environment](https://gym.openai.com/) provides MDP interfaces to a variety of simulated environments. Perhaps the most popular for learning RL is _CartPole_, a simple environment that simulates the physics of balancing a pole on a moving cart. The CartPole problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website, where the pole is currently falling to the right, which means the cart will need to move to the right to restore balance:\n",
+    "The popular [OpenAI \"gym\" environment](https://gym.openai.com/) provides MDP interfaces to a variety of simulated environments. Perhaps the most popular for learning RL is `CartPole`, a simple environment that simulates the physics of balancing a pole on a moving cart. The `CartPole` problem is described at https://gym.openai.com/envs/CartPole-v1. Here is an image from that website, where the pole is currently falling to the right, which means the cart will need to move to the right to restore balance:\n",
     "\n",
     "![Cart Pole](../images/rllib/Cart-Pole.png)"
    ]
@@ -248,7 +248,7 @@
     "id": "WPpofaxQNlhp"
    },
    "source": [
-    "The code below illustrates how to create and manipulate MDPs in Python. An MDP can be created by calling `gym.make`. Gym environments are identified by names like `CartPole-v0`. A **catalog of built-in environments** can be found at https://gym.openai.com/envs."
+    "The code below illustrates how to create and manipulate MDPs in Python. An MDP can be created by calling `gym.make`. Gym environments are identified by names like `CartPole-v1`. A **catalog of built-in environments** can be found at https://gym.openai.com/envs."
    ]
   },
   {
@@ -267,7 +267,7 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v0')\n",
+    "env = gym.make('CartPole-v1')\n",
     "print('Created env:', env)"
    ]
   },
@@ -315,7 +315,7 @@
     "id": "8MuXXesWNlhu"
    },
    "source": [
-    "The `env.step` method takes an action. In the case of the CartPole environment, the appropriate actions are 0 or 1, for pushing the cart to the left or right, respectively. `env.step()` returns a tuple of four things:\n",
+    "The `env.step` method takes an action. In the case of the `CartPole` environment, the appropriate actions are 0 or 1, for pushing the cart to the left or right, respectively. `env.step()` returns a tuple of four things:\n",
     "1. the new state of the environment\n",
     "2. a reward\n",
     "3. a boolean indicating whether the simulation has finished\n",
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try rerunning the following cell a few times. How much do the answers change? Note that the maximum possible reward for _CartPole_ is 200. You'll probably get numbers under 50."
+    "Try rerunning the following cell a few times. How much do the answers change? Note that the maximum possible reward for `CartPole` is 500. You'll probably get numbers under 200."
    ]
   },
   {
@@ -482,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll return to _CartPole_ in lesson [01: Application Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) in the `explore-rllib` section."
+    "We'll return to `CartPole` in lesson [01: Application Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) in the `explore-rllib` section."
    ]
   },
   {
@@ -642,7 +642,7 @@
    },
    "outputs": [],
    "source": [
-    "agent = PPOTrainer(config, 'CartPole-v0')"
+    "agent = PPOTrainer(config, 'CartPole-v1')"
    ]
   },
   {
@@ -652,7 +652,7 @@
     "id": "Ty1a6AWVNlh7"
    },
    "source": [
-    "Now let's train the policy on the `CartPole-v0` environment for `N` steps. The JSON object returned by each call to `agent.train()` contains a lot of information we'll inspect below. For now, we'll extract information we'll graph, such as `episode_reward_mean`. The _mean_ values are more useful for determining successful training."
+    "Now let's train the policy on the `CartPole-v1` environment for `N` steps. The JSON object returned by each call to `agent.train()` contains a lot of information we'll inspect below. For now, we'll extract information we'll graph, such as `episode_reward_mean`. The _mean_ values are more useful for determining successful training."
    ]
   },
   {
@@ -682,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's convert the episode data to a Pandas `DataFrame` for easy manipulation. The results indicate how much reward the policy is receiving (`episode_reward_*`) and how many time steps of the environment the policy ran (`episode_len_mean`). The maximum possible reward for this problem is `200`. The reward mean and trajectory length are very close because the agent receives a reward of one for every time step that it survives. However, this is specific to this environment and not true in general."
+    "Now let's convert the episode data to a Pandas `DataFrame` for easy manipulation. The results indicate how much reward the policy is receiving (`episode_reward_*`) and how many time steps of the environment the policy ran (`episode_len_mean`). The maximum possible reward for this problem is `500`. The reward mean and trajectory length are very close because the agent receives a reward of one for every time step that it survives. However, this is specific to this environment and not true in general."
    ]
   },
   {
@@ -757,7 +757,7 @@
    "source": [
     "([image](../images/rllib/Cart-Pole-Episode-Rewards.png))\n",
     "\n",
-    "The model is quickly able to hit the maximum value of 200, but the mean is what's most valueable. After 10 steps, we're close to the maximum for the mean."
+    "The model is quickly able to hit the maximum value of 500, but the mean is what's most valueable. After 10 steps, we're more than half way there."
    ]
   },
   {
@@ -839,7 +839,7 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "The current network and training configuration are too large and heavy-duty for a simple problem like CartPole. Modify the configuration to use a smaller network (the `config['model']['fcnet_hiddens']` setting) and to speed up the optimization of the surrogate objective. (Fewer SGD iterations and a larger batch size should help.)"
+    "The current network and training configuration are too large and heavy-duty for a simple problem like `CartPole`. Modify the configuration to use a smaller network (the `config['model']['fcnet_hiddens']` setting) and to speed up the optimization of the surrogate objective. (Fewer SGD iterations and a larger batch size should help.)"
    ]
   },
   {
@@ -860,7 +860,7 @@
     "config['model']['fcnet_hiddens'] = [100, 100]\n",
     "config['num_cpus_per_worker'] = 0\n",
     "\n",
-    "agent = PPOTrainer(config, 'CartPole-v0')"
+    "agent = PPOTrainer(config, 'CartPole-v1')"
    ]
   },
   {
@@ -949,7 +949,7 @@
    "outputs": [],
    "source": [
     "trained_config = config.copy()\n",
-    "test_agent = PPOTrainer(trained_config, 'CartPole-v0')\n",
+    "test_agent = PPOTrainer(trained_config, 'CartPole-v1')\n",
     "test_agent.restore(checkpoint_path)"
    ]
   },
@@ -975,7 +975,7 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v0')\n",
+    "env = gym.make('CartPole-v1')\n",
     "state = env.reset()\n",
     "done = False\n",
     "cumulative_reward = 0\n",
