--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -64,10 +64,10 @@
     "pip install ray[rllib]  # or consider using: ray[debug]\n",
     "```\n",
     "\n",
-    "Then **train** _CartPole_ using _PPO_ with the `rllib` CLI. We connect to the running Ray cluster, we'll stop at 20 iterations, and we'll save checkpoints every 10 iterations and at the end:\n",
+    "Then **train** `CartPole` using _PPO_ with the `rllib` CLI. We connect to the running Ray cluster, we'll stop at 20 iterations, and we'll save checkpoints every 10 iterations and at the end:\n",
     "\n",
     "```shell\n",
-    "rllib train --run PPO --env CartPole-v0 --stop='{\"training_iteration\": 20}' --ray-address auto --checkpoint-freq 10 --checkpoint-at-end\n",
+    "rllib train --run PPO --env CartPole-v1 --stop='{\"training_iteration\": 20}' --ray-address auto --checkpoint-freq 10 --checkpoint-at-end\n",
     "```\n",
     "\n",
     "The `rllib` CLI has a `--help` flag that prints details about the supported options:\n",
@@ -86,7 +86,7 @@
     "from ray import tune\n",
     "from ray.rllib.agents.ppo import PPOTrainer\n",
     "tune.run(PPOTrainer, \n",
-    "    config={\"env\": \"CartPole-v0\"},\n",
+    "    config={\"env\": \"CartPole-v1\"},\n",
     "    stop={\"training_iteration\": 20},\n",
     "    checkpoint_at_end=True,\n",
     "    verbose=2            # 2 for INFO; change to 1 or 0 to reduce the output.\n",
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "!rllib train --run PPO --env CartPole-v0 --stop='{\"training_iteration\": 20}' --ray-address auto --checkpoint-freq 10 --checkpoint-at-end"
+    "!rllib train --run PPO --env CartPole-v1 --stop='{\"training_iteration\": 20}' --ray-address auto --checkpoint-freq 10 --checkpoint-at-end"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "\n",
     "Here is a [TensorBoard screenshot](../images/rllib/TensorBoard-CartPole-PPO.png).\n",
     "\n",
-    "The directory `$HOME/ray_results` will contain the results for all the RL training we'll do in this tutorial. You may wish to clean out old results periodically. For the run we just did, look for the results in `$HOME/ray_results/default/PPO-CartPole-V0_0_YYYY-MM-DD_HH-MM-SS*`. "
+    "The directory `$HOME/ray_results` will contain the results for all the RL training we'll do in this tutorial. You may wish to clean out old results periodically. For the run we just did, look for the results in `$HOME/ray_results/default/PPO-CartPole-V1_0_YYYY-MM-DD_HH-MM-SS*`. "
    ]
   },
   {
@@ -163,7 +163,7 @@
     "If you are working on a laptop, you can use `rllib rollout <checkpoint> --run PPO` to run episodes from a `<checkpoint>`, which in this case will be a directory with a name like this:\n",
     "\n",
     "```\n",
-    "$HOME/ray_results/default/PPO_CartPole-v0_0_YYYY-MM-DD_HH-MM-SS.../checkpoint_20/checkpoint-20/\n",
+    "$HOME/ray_results/default/PPO_CartPole-v1_0_YYYY-MM-DD_HH-MM-SS.../checkpoint_20/checkpoint-20/\n",
     "```\n",
     "\n",
     "The following shell command will find the correct directory for you and run the `rllib rollout <checkpoint> --run PPO` command. (It will print the actual command, with the correct checkpoint directory.) If it finds more than once checkpoint directory, for example from a previous run, it uses the latest one.\n",
