--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Explore RLlib - Sample Application: CartPole-v0\n",
+    "# Ray RLlib - Explore RLlib - Sample Application: CartPole\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "We were briefly introduced to the _CartPole_ example and the OpenAI gym `CartPole-v0` environment ([gym.openai.com/envs/CartPole-v0/](https://gym.openai.com/envs/CartPole-v0/)) in the [reinforcement learning introduction](../01-Introduction-to-Reinforcement-Learning.ipynb). This lesson uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy for _CartPole_.\n",
+    "We were briefly introduced to the `CartPole` example and the OpenAI gym `CartPole-v1` environment ([gym.openai.com/envs/CartPole-v1/](https://gym.openai.com/envs/CartPole-v1/)) in the [reinforcement learning introduction](../01-Introduction-to-Reinforcement-Learning.ipynb). This lesson uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy for `CartPole`.\n",
     "\n",
-    "Recall that the `gym` Python module provides MDP interfaces to a variety of simulators, like the simple simulator for the physics of balancing a pole on a cart that is used by the CartPole environment. The _CartPole_ problem is described at https://gym.openai.com/envs/CartPole-v0.\n",
+    "Recall that the `gym` Python module provides MDP interfaces to a variety of simulators, like the simple simulator for the physics of balancing a pole on a cart that is used by the CartPole environment. The `CartPole` problem is described at https://gym.openai.com/envs/CartPole-v1.\n",
     "\n",
     "![Cart Pole](../../images/rllib/Cart-Pole.png)\n",
     "\n",
-    "([source](https://gym.openai.com/envs/CartPole-v0/))\n",
+    "([source](https://gym.openai.com/envs/CartPole-v1/))\n",
     "\n",
-    "Even though this is a relatively simple and quick example to run, its results can be understood quite visually. _CartPole_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
+    "Even though this is a relatively simple and quick example to run, its results can be understood quite visually. `CartPole` is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
     "\n",
     "For more background about this problem, see:\n",
     "\n",
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we'll train an RLlib policy with the [`CartPole-v0` environment](https://gym.openai.com/envs/CartPole-v0/).\n",
+    "Next we'll train an RLlib policy with the [`CartPole-v1` environment](https://gym.openai.com/envs/CartPole-v1/).\n",
     "\n",
     "If you've gone through the _Multi-Armed Bandits_ lessons, you may recall that we used [Ray Tune](http://tune.io), the Ray Hyperparameter Tuning system, to drive training. Here we'll do it ourselves.\n",
     "\n",
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SELECT_ENV = \"CartPole-v0\"                      # Specifies the OpenAI Gym environment for Cart Pole\n",
+    "SELECT_ENV = \"CartPole-v1\"                      # Specifies the OpenAI Gym environment for Cart Pole\n",
     "N_ITER = 10                                     # Number of training runs.\n",
     "\n",
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
@@ -306,7 +306,7 @@
     "\n",
     "Next we'll use the [RLlib rollout CLI](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies), to evaluate the trained policy.\n",
     "\n",
-    "This visualizes the \"cartpole\" agent operating within the simulation: moving the cart left or right to avoid having the pole fall over.\n",
+    "This visualizes the `CartPole` agent operating within the simulation: moving the cart left or right to avoid having the pole fall over.\n",
     "\n",
     "We'll use the last saved checkpoint, `checkpoint_10` (or whatever you set for `N_ITER` above) for the rollout, evaluated through `2000` steps.\n",
     "\n",
@@ -318,11 +318,7 @@
     "You may need to make one more modification, depending on how you are running this tutorial:\n",
     "\n",
     "1. Running on your laptop? - Remove the line `--no-render`. \n",
-    "2. Running on the Anyscale Service? The popup windows that would normally be created by the rollout can't be viewed in this case. Hence, the `--no-render` flag suppresses them. The code cell afterwords provides a sample video. You can try adding `--video-dir tmp/ppo/cart`, which will generate MP4 videos, then download them to view them. Or copy the `Video` cell below and use it to view the movies.\n",
-    "\n",
-    "> **Troubleshooting:** If you get an error like the following:\n",
-    "> `ERROR: Multiple instances of Ray are running:\n",
-    "ERROR:   $@"
+    "2. Running on the Anyscale Service? The popup windows that would normally be created by the rollout can't be viewed in this case. Hence, the `--no-render` flag suppresses them. The code cell afterwords provides a sample video. You can try adding `--video-dir tmp/ppo/cart`, which will generate MP4 videos, then download them to view them. Or copy the `Video` cell below and use it to view the movies."
    ]
   },
   {
@@ -332,7 +328,7 @@
    "outputs": [],
    "source": [
     "!RAY_ADDRESS=auto rllib rollout tmp/ppo/cart/checkpoint_10/checkpoint-10 \\\n",
-    "    --config \"{\\\"env\\\": \\\"CartPole-v0\\\", \\\"model\\\": {\\\"fcnet_hiddens\\\": [100, 50]}}\" \\\n",
+    "    --config \"{\\\"env\\\": \\\"CartPole-v1\\\", \\\"model\\\": {\\\"fcnet_hiddens\\\": [100, 50]}}\" \\\n",
     "    --run PPO \\\n",
     "    --no-render \\\n",
     "    --steps 2000"
