--- a/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
+++ b/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "> **Note:** This rollout can only show the rollout visualization popup windows when running on a local laptop.\n",
     "\n",
-    "Like _CartPole_, _MountainCar_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
+    "Like `CartPole`, _MountainCar_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
     "\n",
     "For more background about this problem, see:\n",
     "\n",
