--- a/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v0')\n",
+    "env = gym.make('CartPole-v1')\n",
     "print('Created env:', env)"
    ]
   },
@@ -98,7 +98,7 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "The current network and training configuration are too large and heavy-duty for a simple problem like CartPole. Modify the configuration to use a smaller network and to speed up the optimization of the surrogate objective. (Fewer SGD iterations and a larger batch size should help.)"
+    "The current network and training configuration are too large and heavy-duty for a simple problem like `CartPole`. Modify the configuration to use a smaller network and to speed up the optimization of the surrogate objective. (Fewer SGD iterations and a larger batch size should help.)"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = PPOTrainer(config, 'CartPole-v0')"
+    "agent = PPOTrainer(config, 'CartPole-v1')"
    ]
   },
   {
