--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -21,6 +21,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Join Us at Ray Summit 2020!\n",
+    "\n",
+    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "\n",
+    "![Ray Summit 2020](images/raysummit-horizontal-white-banner-full.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Getting Help\n",
     "\n",
     "We want to hear your feedback and any issues you encounter!\n",
