--- a/advanced-ray/00-Overview-Advanced-Ray.ipynb
+++ b/advanced-ray/00-Overview-Advanced-Ray.ipynb
@@ -16,7 +16,13 @@
     "\n",
     "Go [here](../Overview.ipynb) for an overview of all tutorials.\n",
     "\n",
-    "> **Tip:** Recall that the [Ray Package Reference](https://docs.ray.io/en/latest/package-ref.html) in the [Ray Docs](https://docs.ray.io/en/latest/) is useful for exploring the API features we'll learn."
+    "> **Tip:** Recall that the [Ray Package Reference](https://docs.ray.io/en/latest/package-ref.html) in the [Ray Docs](https://docs.ray.io/en/latest/) is useful for exploring the API features we'll learn.\n",
+    "\n",
+    "## Join Us at Ray Summit 2020!\n",
+    "\n",
+    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "\n",
+    "![Ray Summit 2020](../images/raysummit-horizontal-white-banner-full.png)"
    ]
   },
   {
