--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -10,6 +10,14 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
+    "## Join Us at Ray Summit 2020!\n",
+    "\n",
+    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "\n",
+    "![Ray Summit 2020](../images/raysummit-horizontal-white-banner-full.png)\n",
+    "\n",
+    "## About This Tutorial\n",
+    "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces _hyperparameter tuning_, often called _hyperparameter optimization_ for which we'll use the acronym _HPO_ (since \"hyperparameter\" is often spelled \"hyper parameter\"). \n",
     "\n",
     "In particular this tutorial introduces [Ray Tune](http://tune.io), Ray's comprehensive HPO library.\n",
