--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "![Ray Summit 2020](images/raysummit-horizontal-white-banner-full.png)"
+    "![Ray Summit 2020](images/raysummit-horizontal-white-banner-full.png)\n",
+    "\n",
+    "We have a schedule of other online events, too: [anyscale.com/events](https://anyscale.com/events)."
    ]
   },
   {
