Added a list of the six core API calls

--- a/ray-crash-course/03-Why-Ray.ipynb
+++ b/ray-crash-course/03-Why-Ray.ipynb
@@ -26,6 +26,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Just Six API Methods\n",
+    "\n",
+    "Almost everything you do with Ray is done with just six API methods:\n",
+    "\n",
+    "#### `ray.init()`\n",
+    "\n",
+    "**Description:** Initialize Ray in your application.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python\n",
+    "ray.init() # Many optional arguments discussed in lesson 06.\n",
+    "```\n",
+    "\n",
+    "#### `@ray.remote`\n",
+    "\n",
+    "**Description:** Decorate a function to make it a remote _task_. Decorate a class to make it a remote _actor_.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python\n",
+    "@ray.remote                          # Define a task\n",
+    "def train_model(source):\n",
+    "    ...\n",
+    "\n",
+    "@ray.remote                          # Define an actor\n",
+    "class ActivityTracker():\n",
+    "    def record(event):\n",
+    "        ...\n",
+    "        return count</code> \n",
+    "```\n",
+    "\n",
+    "#### `x.remote()`\n",
+    "\n",
+    "**Description:** Construct an actor instance or asynchronously run a task or an actor method.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python\n",
+    "m_id = train_model.remote(...)       # Invoke a task\n",
+    "\n",
+    "tracker = ActivityTracker.remote()   # Construct an actor instance\n",
+    "tr_id =  tracker.record.remote(...)  # Invoke an actor method\n",
+    "```\n",
+    "\n",
+    "#### `ray.put()`\n",
+    "\n",
+    "**Description:** Put a value in the distributed object store.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python \n",
+    "put_id = ray.put(my_object)\n",
+    "```\n",
+    "\n",
+    "#### `ray.get()`\n",
+    "\n",
+    "**Description:** Get an object from the distributed object store, either placed there by `ray.put()` explicitly or by a task or actor method, blocking until object is available.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python\n",
+    "model = ray.get(m_id)                # Retrieve result of train_model task invocation\n",
+    "count = ray.get(tr_id)               # Retrieve result of tracker.record method call \n",
+    "thing = ray.get(put_id)              # Retrieve \"my_object\"\n",
+    "```\n",
+    "\n",
+    "#### `ray.wait()`\n",
+    "\n",
+    "**Description:** Wait on a list of ids until one of the corresponding objects is available (e.g., the task completes). Return two lists, one with ids for the available objects and the other with ids for the still-running tasks or method calls.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "```python\n",
+    "finished, running = ray.wait([m_id, tr_id])\n",
+    "```\n",
+    "\n",
+    "These six API methods are the essence of Ray. They provide Ray's concision, flexibility, and power.\n",
+    "\n",
+    "There are [other API methods](https://docs.ray.io/en/latest/package-ref.html) for various administrative and informational purposes. See [06 Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Why Do We Need Ray?\n",
     "\n",
     "Consider the following charts:\n",
@@ -38,7 +124,7 @@
    "source": [
     "ML/AI model sizes have grown enormously in recent years, roughly 35x every 18 months, which is considerably faster than Moore's Law! Hence, this growth is far outstripping the growth of hardware capabilities. The only way to meet the need for sufficient compute power is to go distributed, as [Ion Stoica recently wrote](https://anyscale.com/blog/the-future-of-computing-is-distributed/).\n",
     "\n",
-    "At the same time, the use of Python is growing rapidly, because it is a very popular language for data science. Many of the ML/AI toolkits are Python-based. Hence, there is a pressing need for powerful, yet easy-to-use tools for scaling Python applications horizontally. This is the motivation for Ray."
+    "At the same time, the use of Python is growing rapidly, because it is a very popular language for data science. Many of the ML/AI toolkits are Python-based. Hence, there is a pressing need for powerful, yet easy-to-use tools for scaling Python applications horizontally. This is the motivation for Ray. You saw Ray in action in lessons [01](01-Ray-Tasks.ipynb) and [02](02-Ray-Actors.ipynb)."
    ]
   },
   {
@@ -52,11 +138,7 @@
     "* [multiprocessing.Pool](https://docs.python.org/3/library/multiprocessing.html?highlight=pool#module-multiprocessing.pool) for creating a pool of asynchronous workers\n",
     "* [joblib](https://joblib.readthedocs.io/en/latest/) for creating lightweight pipelines \n",
     "\n",
-    "However, while all of them make it easier to exploit all the CPU cores on your machine, they don't provide distributed computing beyond the boundaries of your machine. Ray breaks that boundary.\n",
-    "\n",
-    "In fact, Ray also provides implementations of these APIs, so you are no longer limited to the boundaries of a single machine.\n",
-    "\n",
-    "We'll learn more about these implementations in [lesson 6](06-AdoptingRay.ipynb)."
+    "However, while all of them make it easier to exploit all the CPU cores on your machine, they don't provide distributed computing beyond the boundaries of your machine. In fact, Ray also provides implementations of these APIs, so you are no longer limited to the boundaries of a single machine, as we'll see in the next lesson, [04 Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)."
    ]
   },
   {
