Added a placeholder Overview for the forthcoming Ray Cluster Launcher material.

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -354,7 +354,11 @@
     "\n",
     "When managing Ray clusters, you will want to use the _Ray Cluster Launcher_.\n",
     "\n",
-    "> **Note:** This tutorial will be released soon."
+    "> **Note:** This tutorial will be released soon. To see the evolving, pre-release details for Cluster Launcher, see [this documentation](https://docs.ray.io/en/master/cluster/launcher.html).\n",
+    "\n",
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Ray Cluster Launcher](ray-cluster-launcher/00-Ray-Cluster-Launcher-Overview.ipynb) | Overview of this tutorial. |"
    ]
   }
  ],
