Refinements to work better on the platform

--- a/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
@@ -169,7 +169,9 @@
     "\n",
     "The next cell runs Tune for this purpose. The comments explain what each argument does. We'll do four tries, one for each combination of the two possible values for the two hidden layers.\n",
     "\n",
-    "> **Note:** `tune.run` will handle Ray initialization for us, if it isn't already initialized. To force Tune to throw an error instead, pass the argument `ray_auto_init=False`."
+    "> **Note:** `tune.run` will handle Ray initialization for us, if it isn't already initialized. To force Tune to throw an error instead, pass the argument `ray_auto_init=False`.\n",
+    "\n",
+    "The next cell will take 5-6 minutes to run."
    ]
   },
   {
@@ -187,7 +189,8 @@
     "    config={\n",
     "        \"env\": \"CartPole-v1\",                 # Tune can associate this string with the environment.\n",
     "        \"num_gpus\": 0,                        # If you have GPUs, go for it!\n",
-    "        \"num_workers\": 6,                     # Number of Ray workers to use (arbitrary choice).\n",
+    "        \"num_workers\": 3,                     # Number of Ray workers to use; Use one LESS than \n",
+    "                                              # the number of cores you wan to use (or omit this argument)!\n",
     "        \"model\": {                            # The NN model we'll optimize.\n",
     "            'fcnet_hiddens': [                # \"Fully-connected network with N hidden layers\".\n",
     "                tune.grid_search([20, 40]),   # Try these four values for layer one.\n",
@@ -277,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see from this table that the `[20,20]` hyperparameter set took the *most* training iterations, which is understandable as it is the least powerful network configuration. The corresponding number of timesteps was the longest. In contrast, `[40,40]` was the fastest to train with almost the same `episode_reward_mean` value.\n",
+    "We see from this table that the `[20,20]` hyperparameter set took the *most* training iterations, which is understandable as it is the least powerful network configuration. The corresponding number of timesteps was the longest. In contrast, `[40,20]` and `[40,40]` are the fastest to train with almost the same `episode_reward_mean` value.\n",
     "\n",
     "Since all four combinations perform equally well, perhaps it's best to choose the largest network as it trains the fastest. If we need to train the neural network frequently, then fast training times might be most important. This also suggests that we should be sure the trial sizes we used are really best. In a real-world application, you would want to spend more time on HPO, trying a larger set of possible values."
    ]
