--- a/ray-tune/02-Ray-Tune-with-MNIST.ipynb
+++ b/ray-tune/02-Ray-Tune-with-MNIST.ipynb
@@ -349,7 +349,7 @@
     "\n",
     "We'll try both, starting with the functional API.\n",
     "\n",
-    "We add a stopping criterion, `stop={\"training_iteration\": 10}`, so this will go quickly. Consider removing this condition if you don't mind waiting."
+    "We add a stopping criterion, `stop={\"training_iteration\": 20}`, so this will go reasonably quickly, while still producing good results. Consider removing this condition if you don't mind waiting longer and you want optimal results."
    ]
   },
   {
