--- a/ray-tune/03-Search-Algos-and-Schedulers.ipynb
+++ b/ray-tune/03-Search-Algos-and-Schedulers.ipynb
@@ -36,6 +36,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
