--- a/ray-tune/03-Search-Algos-and-Schedulers.ipynb
+++ b/ray-tune/03-Search-Algos-and-Schedulers.ipynb
@@ -309,7 +309,7 @@
     "\n",
     "Read the [documentation]() on _population based training_ to understand what it is doing. The next cell configures a PBT scheduler and defines other things you'll need. \n",
     "\n",
-    "See also the discussion for the results [here](solutions/03/Search-Algos-and-Schedulers-Solutions.ipynb).\n",
+    "See also the discussion for the results in the [solutions](solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb).\n",
     "\n",
     "> **NOTE:** For a more complete example using MNIST and PyTorch, see [this example code](https://github.com/ray-project/ray/blob/master/python/ray/tune/examples/mnist_pytorch_lightning.py)."
    ]
