bug fix in handling training vs. testing data

--- a/ray-serve/02-Ray-Serve-Example.ipynb
+++ b/ray-serve/02-Ray-Serve-Example.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Training and validation split\n",
-    "np.random.shuffle(data), np.random.shuffle(target)\n",
+    "data, target = sklearn.utils.shuffle(data, target)\n",
     "train_x, train_y = data[:100], target[:100]\n",
     "val_x, val_y = data[100:], target[100:]"
    ]
